<resources>
    <string name="app_name">Final.Project.Venkateswaran.Ananth</string>

    <string name="action_settings">Settings</string>

    <string name="no_geocoder_available">No geocoder available</string>

    <string name="fetch_address">Fetch address</string>

    <string name="address_found">Address found</string>

    <string name="no_address_found">Sorry, no address found</string>

    <string name="no_location_data_provided">No location data provided</string>

    <string name="service_not_available">Sorry, the service is not available</string>

    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>

    <string name="welcome"> Welcome to Stryl! Start listening to music based on the name of the street nearest to you.</string>

    <string name="startListening">Start</string>

    <string name="viewPlaylists">Playlists</string>

    <string name="changeLocation">Change</string>

    <string name="title_activity_play_screen">Street Play</string>

    <string name="play">Play</string>

    <string name="pause">Pause</string>

    <string name="next">Next</string>

    <string name="previous">Previous</string>

    <string name="song">Song</string>

    <string name="album">Album</string>

    <string name="artist">Artist</string>

    <string name="youAre">You are currently on</string>

    <string name="location">Your location</string>

    <string name="title_activity_playlist_screen">Your Playlists</string>

    <string name="title_activity_playlist_detail">Playlist Tracksy</string>
</resources>
