<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="itp341.ananth.venkateswaran.finalprojectvenkateswaranananth.PlayScreen">

    <ImageView
        android:layout_width="400dp"
        android:layout_height="150dp"
        android:id="@+id/albumArt"
        android:src="@drawable/placeholder_car1"
        android:contentDescription="albumArt"
        android:maxHeight="150dp"
        android:maxWidth="400dp"
        android:layout_below="@+id/streetName"
        android:layout_alignEnd="@+id/nextBtn" />

    <Button
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="@string/pause"
        android:id="@+id/pauseBtn"
        android:layout_marginLeft="10dp"
        android:layout_above="@+id/songView"
        android:layout_toEndOf="@+id/songName" />

    <Button
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:id="@+id/playBtn"
        android:layout_marginLeft="10dp"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/songView" />

    <Button
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:id="@+id/nextBtn"
        android:layout_alignTop="@+id/pauseBtn"
        android:layout_toEndOf="@+id/pauseBtn"
        android:layout_marginLeft="10dp" />

    <Button
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/previous"
        android:id="@+id/prevBtn"
        android:layout_marginLeft="10dp"
        android:layout_alignTop="@+id/playBtn"
        android:layout_toStartOf="@+id/streetView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/song"
        android:id="@+id/songView"
        android:layout_marginTop="34dp"
        android:layout_below="@+id/playBtn"
        android:layout_toEndOf="@+id/prevBtn" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/songName"
        android:layout_alignTop="@+id/songView"
        android:layout_toEndOf="@+id/playBtn" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Album"
        android:id="@+id/albumView"
        android:layout_below="@+id/songView"
        android:layout_alignStart="@+id/songView"
        android:layout_marginTop="33dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/albumName"
        android:layout_alignTop="@+id/albumView"
        android:layout_toEndOf="@+id/playBtn" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/artist"
        android:id="@+id/artistview"
        android:layout_below="@+id/albumView"
        android:layout_alignStart="@+id/albumView"
        android:layout_marginTop="31dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/artistName"
        android:layout_alignTop="@+id/artistview"
        android:layout_alignStart="@+id/albumName" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="\@string/viewPlaylists"
        android:id="@+id/viewPlaylistBtn"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/youAre"
        android:id="@+id/streetView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/streetName"
        android:layout_below="@+id/streetView"
        android:layout_toEndOf="@+id/albumView" />
</RelativeLayout>
